# familybudget

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  local.yml  manage.py  pyproject.toml
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  entrypoint
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
familybudget/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
familybudget/budgets/: admin.py  apps.py  models.py
familybudget/budgets/api/: filters.py  permissions.py  serializers.py  views.py
familybudget/budgets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_budget_category_alter_budget_owner.py  0004_alter_budget_category.py
familybudget/budgets/tests/: conftest.py  factories.py  test_models.py  test_views.py
familybudget/users/: admin.py  apps.py  models.py
familybudget/users/api/: filters.py  serializers.py  views.py
familybudget/users/migrations/: 0001_initial.py
familybudget/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_managers.py  test_models.py
fixtures/: fixtures.json
requirements/: base.txt  test.txt
